# ccbot

./: .env.example  ARCHITECTURE.md  CLAUDE.md  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: restart.sh
src/ccbot/: bot.py  config.py  hook.py  main.py  session.py  session_monitor.py  terminal_parser.py
src/ccbot/handlers/: callback_data.py  cleanup.py  directory_browser.py  interactive_ui.py  message_queue.py  message_sender.py  status_polling.py
src/ccbot/multiplexer/: __init__.py  base.py  tmux_backend.py  zellij_backend.py
tests/: conftest.py  test_bind_unbind.py  test_directory_browser.py  test_hook.py  test_hook_zellij.py  test_markdown_v2.py  test_message_queue_merge.py  test_monitor_state.py  test_multiplexer_base.py  test_response_builder.py  test_screenshot.py  test_session_monitor_incremental.py  test_session_resolution.py  test_session_state.py  test_telegram_sender.py  test_terminal_parser.py  test_transcript_parser.py  test_utils.py  test_zellij_backend.py
